#183, Modified new Consumer API w.r.t error handling, file deletion